<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="16dp"
    tools:context="com.example.android.quizonkorea.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/first_question_card"
            style="@style/card_style"
            card_view:cardCornerRadius="15dp"
            card_view:cardBackgroundColor="@color/cardBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:src="@drawable/korea"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:text ="@string/first_question"
                    style="@style/question_style"/>
                <EditText
                    android:id="@+id/first_answer_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:hint="Enter Your Answer"
                    android:inputType="textCapWords"
                    android:textSize="13sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/second_question_card"
            style="@style/card_style"
            card_view:cardCornerRadius="15dp"
            card_view:cardBackgroundColor="@color/cardBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text ="@string/second_question"
                    style="@style/question_style"/>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/choice_newyork"
                        style="@style/answer_style"
                        android:text="New York"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/choice_paris"
                        style="@style/answer_style"
                        android:text="Paris"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/choice_london"
                        style="@style/answer_style"
                        android:text="London"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/choice_seoul"
                        style="@style/answer_style"
                        android:text="Seoul"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/choice_moscow"
                        style="@style/answer_style"
                        android:text="Moscow"
                        android:textAppearance="?android:textAppearanceMedium" />

                </RadioGroup>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/third_question_card"
            style="@style/card_style"
            card_view:cardCornerRadius="15dp"
            card_view:cardBackgroundColor="@color/cardBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_style"
                    android:text="@string/third_question"/>

                <CheckBox
                    android:id="@+id/check_seoul"
                    style="@style/answer_style"
                    android:text="Seoul"/>

                <CheckBox
                    android:id="@+id/check_chicago"
                    style="@style/answer_style"
                    android:text="Chicago"/>

                <CheckBox
                    android:id="@+id/check_toronto"
                    style="@style/answer_style"
                    android:text="Toronto"/>

                <CheckBox
                    android:id="@+id/check_lisbon"
                    style="@style/answer_style"
                    android:text="Lisbon"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fourth_question_card"
            style="@style/card_style"
            card_view:cardCornerRadius="15dp"
            card_view:cardBackgroundColor="@color/cardBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_style"
                    android:text="@string/fourth_question"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/choice_yes"
                        style="@style/answer_style"
                        android:text="Yes"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/choice_no"
                        style="@style/answer_style"
                        android:text="No"
                        android:textAppearance="?android:textAppearanceMedium" />

                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fifth_question_card"
            style="@style/card_style"
            card_view:cardCornerRadius="15dp"
            card_view:cardBackgroundColor="@color/cardBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/question_style"
                    android:text="@string/fifth_question"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/choice_jackson"
                        style="@style/answer_style"
                        android:text="Micheal Jackson"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/choice_jung"
                        style="@style/answer_style"
                        android:text="Sungin Jung"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/choice_washington"
                        style="@style/answer_style"
                        android:text="George Washington"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/choice_franklin"
                        style="@style/answer_style"
                        android:text="Benjamin Franklin"
                        android:textAppearance="?android:textAppearanceMedium" />

                 </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/gradeColor"
            android:text="Grade It!!!!"
            android:onClick="calculateFinalGrade"/>

    </LinearLayout>

</ScrollView>
